crates/infrastructure/tests/violations/infra_imports_domain.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `domain`
 --> tests/violations/infra_imports_domain.rs:5:5
  |
5 | use domain::ping::PingResult;
  |     ^^^^^^ use of unresolved module or unlinked crate `domain`
  |
  = help: if you wanted to use a crate named `domain`, use `cargo add domain` to add it to your `Cargo.toml`
